<resources>
    <string name="app_name">StudyAPP</string>
    <string name="test_text">Estagiario da Transire</string>
    <string name="loginBtt">Entrar</string>
    <string name="estRadio">Estagiário</string>
    <string name="admRadio">Administrador</string>
    <string name="loginText">Login</string>
    <string name="passText">Senha</string>
    <string name="userHint">username</string>
    <string name="passHint">pass</string>
    <string name="aboutMenu">sobre</string>
    <string name="newUser">Novo Usuário</string>
    <string name="welcome">Bem-vindo!</string>
    <string name="register">Cadastrar Novo Usuário</string>
    <string name="registerBtt">Cadastrar</string>
</resources>
